fix: Add overflow-x: scroll to tab list

--- a/stylus/components/tabs.styl
+++ b/stylus/components/tabs.styl
@@ -5,6 +5,7 @@ $tabs-base
     .coz-tab-list
         border-bottom  rem(1) solid var(--silver)
         background var(--tabsBackgroundColor)
+        overflow-x scroll
 
     .coz-tab-list--inverted
         --tabsActiveTextColor var(--primaryContrastTextColor)
